--- a/leo-satellite-observer.html
+++ b/leo-satellite-observer.html
@@ -173,184 +173,7 @@
     <div id="map"></div>
 
     <script>
-      var map;
-      var markersCluster; // Global so we can toggle it
-      const BLINKING_GIF_URL = 'img/rover1.gif?v=1';
-
-      function destinationPoint(lat, lon, distance, bearing) {
-        const R = 6371000;
-        const rad = Math.PI / 180;
-        const deg = 180 / Math.PI;
-        lat = lat * rad;
-        lon = lon * rad;
-        bearing = bearing * rad;
-        const d = distance / R;
-        const lat2 = Math.asin(Math.sin(lat) * Math.cos(d) + Math.cos(lat) * Math.sin(d) * Math.cos(bearing));
-        const lon2 = lon + Math.atan2(Math.sin(bearing) * Math.sin(d) * Math.cos(lat),
-                                      Math.cos(d) - Math.sin(lat) * Math.sin(lat2));
-        return { lat: lat2 * deg, lng: lon2 * deg };
-      }
-
-        function calculateCoordinates(grid) {
-            grid = grid.toUpperCase();
-            if (!/^[A-R]{2}\d{2}[A-X]{2}$/.test(grid)) return null;
-
-            // Latitude
-            const lat = -90
-                + (grid.charCodeAt(1) - 65) * 10       // Field
-                + parseInt(grid.charAt(3))             // Square
-                + (grid.charCodeAt(5) - 65) / 24      // Subsquare
-                + 1/48;                                // center of subsquare
-
-            // Longitude
-            const lon = -180
-                + (grid.charCodeAt(0) - 65) * 20      // Field
-                + parseInt(grid.charAt(2)) * 2         // Square
-                + (grid.charCodeAt(4) - 65) / 12      // Subsquare
-                + 1/24;                                // center of subsquare
-
-            return { lat, lng: lon };
-        }
-
-
-      function initMap(gridLocator) {
-        if (map) map.remove();
-        map = L.map('map', { center: [0, 0], zoom: 2, zoomControl: false, attributionControl: true });
-
-        L.control.zoom({ position: 'bottomright' }).addTo(map);
-
-        var osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-          attribution: 'Map data © <a href="https://openstreetmap.org">OpenStreetMap</a> contributors',
-          minZoom: 0,
-          maxZoom: 20
-        }).addTo(map);
-
-        var cqzones = L.cqzones();
-        var maidenhead = L.maidenhead();
-
-        maidenhead.addTo(map);
-
-        // MarkerCluster for all stations
-        markersCluster = L.markerClusterGroup({
-          spiderfyOnMaxZoom: true,
-          showCoverageOnHover: false,
-          maxClusterRadius: 10
-        });
-
-        // Load announcements
-        fetch('announcements_filtered.txt')
-          .then(response => response.text())
-          .then(data => {
-            const announcements = data.trim().split('\n');
-            announcements.forEach(announcement => {
-              const coordinates = announcement.match(/Coordinates: \((.*), (.*)\)/);
-              const timeString = announcement.match(/Time: ([^,]*)/);
-              const callsign = announcement.match(/Callsign: ([^,]*)/);
-              if (!coordinates || !timeString || !callsign) return;
-
-              const lat = parseFloat(coordinates[1]);
-              const lng = parseFloat(coordinates[2]);
-              const time = new Date(timeString[1]);
-              if (time <= new Date()) return;
-
-              const marker = L.marker([lat, lng], {
-                icon: L.icon({ iconUrl: BLINKING_GIF_URL, iconSize: [16, 16], iconAnchor: [10, 10] })
-              });
-
-              marker.bindPopup(`<div><a href="https://hams.at/alerts" target="_blank">${callsign[1]}</a></div>`);
-              markersCluster.addLayer(marker);
-            });
-
-            // Load main LEO markers
-            fetch("output_leo.txt")
-              .then(response => response.text())
-              .then(data => {
-                const regex = /TRP: ([^,]+), Date: ([^,]+), Callsign: ([^,]+), Grid locator: ([^,]+), Coord: \(([^,]+), ([^)]+)\)/g;
-                const callsigns = {};
-                let match;
-                while ((match = regex.exec(data)) !== null) {
-                  const callsign = match[3];
-                  const dxgridlocator = match[4];
-                  const lat = parseFloat(match[5]);
-                  const lng = parseFloat(match[6]);
-                  const key = `${lat},${lng}`;
-                  if (!callsigns[key]) callsigns[key] = [];
-                  callsigns[key].push({ callsign, dxgridlocator, markerIcon: "img/176096839586434633.png" });
-                }
-
-                for (const key in callsigns) {
-                  const [lat, lng] = key.split(",");
-                  const markers = callsigns[key];
-                  const markerIcon = markers[0].markerIcon;
-                  const marker = L.marker([lat, lng], {
-                    icon: L.icon({ iconUrl: markerIcon, iconSize: [16, 16], iconAnchor: [10, 10] }),
-                    title: markers.map(m => m.callsign).join(", ")
-                  });
-
-                  const popupHtml = `<div>${markers.map(m => `<a href="https://www.qrz.com/db/${m.callsign}" target="_blank">${m.callsign}</a>`).join(", ")}</div>`;
-                  marker.bindPopup(popupHtml);
-                  markersCluster.addLayer(marker);
-                }
-
-                // Add markersCluster to map
-                map.addLayer(markersCluster);
-              });
-          });
-
-        // Draw satellite footprints
-        if (gridLocator) {
-          const coords = calculateCoordinates(gridLocator);
-          if (!coords) return;
-          L.marker([coords.lat, coords.lng], { title: gridLocator }).addTo(map);
-
-          const circles = [
-            { radius: 4970000, label: "SO-50", angle: 265 },
-            { radius: 7502000, label: "FO-29", angle: 245 },
-            { radius: 8042000, label: "RS-44", angle: 225 },
-            { radius: 3940000, label: "ISS", angle: 275 },
-            { radius: 7907000, label: "AO-07", angle: 235 },
-            { radius: 5712000, label: "AO-91", angle: 255 },
-            { radius: 13000000, label: "IO-117", angle: 185, strokeColor: "#808080", fillOpacity: 0.0 }
-          ];
-
-          circles.forEach(circle => {
-              L.greatCircle([coords.lat, coords.lng], {
-                  radius: circle.radius,
-                  color: circle.strokeColor || "#FF0000",
-                  fillOpacity: circle.fillOpacity !== undefined ? circle.fillOpacity : 0.05,
-                  weight: 1,
-                  wrapElements: true,
-                  clipLat: 85,
-                  degStep: 0.5,
-                  maxCopies: -1
-              }).addTo(map);
-
-              const labelPoint = destinationPoint(coords.lat, coords.lng, circle.radius, circle.angle-125);
-
-              L.marker([labelPoint.lat, labelPoint.lng], {
-                  icon: L.divIcon({
-                      className: 'sat-label',
-                      html: circle.label,
-                      iconSize: [40, 20],
-                      iconAnchor: [20, 10]
-                  }),
-                  interactive: false
-              }).addTo(map);
-          });
-        }
-
-        // Add layer control with stations toggle
-        L.control.layers(
-          { 'Map': osm },
-          {
-            "<span style='color: black'>CQ Zones</span>": cqzones,
-            "<span style='color: black'>QTH Locators</span>": maidenhead,
-            "<span style='color: black'>Stations</span>": markersCluster
-          }
-        ).addTo(map);
-      }
-
-      initMap('');
+        function _0x4c2a(_0x1e0501,_0x5acdc4){const _0x33aff4=_0x33af();return _0x4c2a=function(_0x4c2a45,_0x2c88d1){_0x4c2a45=_0x4c2a45-0x1ca;let _0x595b3f=_0x33aff4[_0x4c2a45];return _0x595b3f;},_0x4c2a(_0x1e0501,_0x5acdc4);}const _0x4d3157=_0x4c2a;(function(_0x42ff65,_0x57719d){const _0x4144cf=_0x4c2a,_0x50175e=_0x42ff65();while(!![]){try{const _0x2d8582=parseInt(_0x4144cf(0x209))/0x1*(parseInt(_0x4144cf(0x1ef))/0x2)+parseInt(_0x4144cf(0x1fb))/0x3*(-parseInt(_0x4144cf(0x1db))/0x4)+parseInt(_0x4144cf(0x1fe))/0x5+-parseInt(_0x4144cf(0x1e0))/0x6*(-parseInt(_0x4144cf(0x1eb))/0x7)+-parseInt(_0x4144cf(0x200))/0x8+-parseInt(_0x4144cf(0x1f1))/0x9+parseInt(_0x4144cf(0x1e1))/0xa;if(_0x2d8582===_0x57719d)break;else _0x50175e['push'](_0x50175e['shift']());}catch(_0x54a01b){_0x50175e['push'](_0x50175e['shift']());}}}(_0x33af,0xb2da8));function _0x33af(){const _0xca4b28=['forEach','divIcon','asin','956snTitP','lat','layers','maidenhead','label','30SWVdiw','8293830bgwJTR','icon','atan2','fillOpacity','bottomright','img/rover1.gif?v=1','#808080','ISS','match','addTo','1119146IYQEEH','split','\x22\x20target=\x22_blank\x22>','markerIcon','14hyNkKL','</a>','500112AxAGtT','strokeColor','FO-29','marker','radius','push','exec','https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png','lng','test','13227vtfeec','img/176096839586434633.png','charCodeAt','3206035mWLmmS','sat-label','11472880CaKUBj','AO-07','<div><a\x20href=\x22https://hams.at/alerts\x22\x20target=\x22_blank\x22>','IO-117','</div>','bindPopup','tileLayer','cos','then','143719YvVodj','AO-91','<div>','text','map','callsign','addLayer','remove','RS-44','charAt','<a\x20href=\x22https://www.qrz.com/db/','control','sin','announcements_filtered.txt','trim','zoom'];_0x33af=function(){return _0xca4b28;};return _0x33af();}var map,markersCluster;const BLINKING_GIF_URL=_0x4d3157(0x1e6);function destinationPoint(_0x47829f,_0x500e0c,_0x575090,_0x146c24){const _0x5ac5ca=_0x4d3157,_0x1c7e14=0x6136b8,_0x3f1bf2=Math['PI']/0xb4,_0x3f47fb=0xb4/Math['PI'];_0x47829f=_0x47829f*_0x3f1bf2,_0x500e0c=_0x500e0c*_0x3f1bf2,_0x146c24=_0x146c24*_0x3f1bf2;const _0x200788=_0x575090/_0x1c7e14,_0x347a39=Math[_0x5ac5ca(0x1da)](Math[_0x5ac5ca(0x1d4)](_0x47829f)*Math[_0x5ac5ca(0x207)](_0x200788)+Math[_0x5ac5ca(0x207)](_0x47829f)*Math[_0x5ac5ca(0x1d4)](_0x200788)*Math[_0x5ac5ca(0x207)](_0x146c24)),_0x504274=_0x500e0c+Math[_0x5ac5ca(0x1e3)](Math[_0x5ac5ca(0x1d4)](_0x146c24)*Math[_0x5ac5ca(0x1d4)](_0x200788)*Math['cos'](_0x47829f),Math[_0x5ac5ca(0x207)](_0x200788)-Math[_0x5ac5ca(0x1d4)](_0x47829f)*Math['sin'](_0x347a39));return{'lat':_0x347a39*_0x3f47fb,'lng':_0x504274*_0x3f47fb};}function calculateCoordinates(_0x40b289){const _0x1c06d3=_0x4d3157;_0x40b289=_0x40b289['toUpperCase']();if(!/^[A-R]{2}\d{2}[A-X]{2}$/[_0x1c06d3(0x1fa)](_0x40b289))return null;const _0x1efbc1=-0x5a+(_0x40b289[_0x1c06d3(0x1fd)](0x1)-0x41)*0xa+parseInt(_0x40b289[_0x1c06d3(0x1d1)](0x3))+(_0x40b289['charCodeAt'](0x5)-0x41)/0x18+0x1/0x30,_0x5b9ee5=-0xb4+(_0x40b289[_0x1c06d3(0x1fd)](0x0)-0x41)*0x14+parseInt(_0x40b289[_0x1c06d3(0x1d1)](0x2))*0x2+(_0x40b289[_0x1c06d3(0x1fd)](0x4)-0x41)/0xc+0x1/0x18;return{'lat':_0x1efbc1,'lng':_0x5b9ee5};}function initMap(_0x29a668){const _0x501053=_0x4d3157;if(map)map[_0x501053(0x1cf)]();map=L[_0x501053(0x1cc)](_0x501053(0x1cc),{'center':[0x0,0x0],'zoom':0x2,'zoomControl':![],'attributionControl':!![]}),L['control'][_0x501053(0x1d7)]({'position':_0x501053(0x1e5)})[_0x501053(0x1ea)](map);var _0x23bb58=L[_0x501053(0x206)](_0x501053(0x1f8),{'attribution':'Map\x20data\x20©\x20<a\x20href=\x22https://openstreetmap.org\x22>OpenStreetMap</a>\x20contributors','minZoom':0x0,'maxZoom':0x14})['addTo'](map),_0x41cf62=L['cqzones'](),_0x4b4bfe=L[_0x501053(0x1de)]();_0x4b4bfe[_0x501053(0x1ea)](map),markersCluster=L['markerClusterGroup']({'spiderfyOnMaxZoom':!![],'showCoverageOnHover':![],'maxClusterRadius':0xa}),fetch(_0x501053(0x1d5))[_0x501053(0x208)](_0x3d8152=>_0x3d8152[_0x501053(0x1cb)]())[_0x501053(0x208)](_0x413efe=>{const _0x599d5d=_0x501053,_0xebb6b5=_0x413efe[_0x599d5d(0x1d6)]()[_0x599d5d(0x1ec)]('\x0a');_0xebb6b5[_0x599d5d(0x1d8)](_0x158dc9=>{const _0x184d34=_0x599d5d,_0x104df5=_0x158dc9[_0x184d34(0x1e9)](/Coordinates: \((.*), (.*)\)/),_0x13cc74=_0x158dc9[_0x184d34(0x1e9)](/Time: ([^,]*)/),_0x2c8199=_0x158dc9[_0x184d34(0x1e9)](/Callsign: ([^,]*)/);if(!_0x104df5||!_0x13cc74||!_0x2c8199)return;const _0x5cc631=parseFloat(_0x104df5[0x1]),_0x4a0b4e=parseFloat(_0x104df5[0x2]),_0x21f136=new Date(_0x13cc74[0x1]);if(_0x21f136<=new Date())return;const _0x18307c=L[_0x184d34(0x1f4)]([_0x5cc631,_0x4a0b4e],{'icon':L[_0x184d34(0x1e2)]({'iconUrl':BLINKING_GIF_URL,'iconSize':[0x10,0x10],'iconAnchor':[0xa,0xa]})});_0x18307c[_0x184d34(0x205)](_0x184d34(0x202)+_0x2c8199[0x1]+'</a></div>'),markersCluster[_0x184d34(0x1ce)](_0x18307c);}),fetch('output_leo.txt')[_0x599d5d(0x208)](_0x455c29=>_0x455c29[_0x599d5d(0x1cb)]())[_0x599d5d(0x208)](_0x123995=>{const _0x109cfb=_0x599d5d,_0x168605=/TRP: ([^,]+), Date: ([^,]+), Callsign: ([^,]+), Grid locator: ([^,]+), Coord: \(([^,]+), ([^)]+)\)/g,_0x3e73dd={};let _0x4e47cd;while((_0x4e47cd=_0x168605[_0x109cfb(0x1f7)](_0x123995))!==null){const _0x301d20=_0x4e47cd[0x3],_0x12bff6=_0x4e47cd[0x4],_0x552a64=parseFloat(_0x4e47cd[0x5]),_0x4d705f=parseFloat(_0x4e47cd[0x6]),_0x54adb4=_0x552a64+','+_0x4d705f;if(!_0x3e73dd[_0x54adb4])_0x3e73dd[_0x54adb4]=[];_0x3e73dd[_0x54adb4][_0x109cfb(0x1f6)]({'callsign':_0x301d20,'dxgridlocator':_0x12bff6,'markerIcon':_0x109cfb(0x1fc)});}for(const _0x27d5bd in _0x3e73dd){const [_0x1566a3,_0x26a959]=_0x27d5bd['split'](','),_0x1cc32e=_0x3e73dd[_0x27d5bd],_0x4578ff=_0x1cc32e[0x0][_0x109cfb(0x1ee)],_0x83a4c6=L[_0x109cfb(0x1f4)]([_0x1566a3,_0x26a959],{'icon':L['icon']({'iconUrl':_0x4578ff,'iconSize':[0x10,0x10],'iconAnchor':[0xa,0xa]}),'title':_0x1cc32e[_0x109cfb(0x1cc)](_0x58a47d=>_0x58a47d[_0x109cfb(0x1cd)])['join'](',\x20')}),_0x1ba413=_0x109cfb(0x1ca)+_0x1cc32e[_0x109cfb(0x1cc)](_0x3e617f=>_0x109cfb(0x1d2)+_0x3e617f[_0x109cfb(0x1cd)]+_0x109cfb(0x1ed)+_0x3e617f[_0x109cfb(0x1cd)]+_0x109cfb(0x1f0))['join'](',\x20')+_0x109cfb(0x204);_0x83a4c6[_0x109cfb(0x205)](_0x1ba413),markersCluster['addLayer'](_0x83a4c6);}map[_0x109cfb(0x1ce)](markersCluster);});});if(_0x29a668){const _0x169302=calculateCoordinates(_0x29a668);if(!_0x169302)return;L['marker']([_0x169302[_0x501053(0x1dc)],_0x169302[_0x501053(0x1f9)]],{'title':_0x29a668})[_0x501053(0x1ea)](map);const _0x38f459=[{'radius':0x4bd610,'label':'SO-50','angle':0x109},{'radius':0x7278b0,'label':_0x501053(0x1f3),'angle':0xf5},{'radius':0x7ab610,'label':_0x501053(0x1d0),'angle':0xe1},{'radius':0x3c1ea0,'label':_0x501053(0x1e8),'angle':0x113},{'radius':0x78a6b8,'label':_0x501053(0x201),'angle':0xeb},{'radius':0x572880,'label':_0x501053(0x20a),'angle':0xff},{'radius':0xc65d40,'label':_0x501053(0x203),'angle':0xb9,'strokeColor':_0x501053(0x1e7),'fillOpacity':0x0}];_0x38f459['forEach'](_0x6c8dfe=>{const _0x4879eb=_0x501053;L['greatCircle']([_0x169302[_0x4879eb(0x1dc)],_0x169302[_0x4879eb(0x1f9)]],{'radius':_0x6c8dfe[_0x4879eb(0x1f5)],'color':_0x6c8dfe[_0x4879eb(0x1f2)]||'#FF0000','fillOpacity':_0x6c8dfe['fillOpacity']!==undefined?_0x6c8dfe[_0x4879eb(0x1e4)]:0.05,'weight':0x1,'wrapElements':!![],'clipLat':0x55,'degStep':0.5,'maxCopies':-0x1})[_0x4879eb(0x1ea)](map);const _0x5cc496=destinationPoint(_0x169302[_0x4879eb(0x1dc)],_0x169302[_0x4879eb(0x1f9)],_0x6c8dfe[_0x4879eb(0x1f5)],_0x6c8dfe['angle']-0x7d);L['marker']([_0x5cc496[_0x4879eb(0x1dc)],_0x5cc496['lng']],{'icon':L[_0x4879eb(0x1d9)]({'className':_0x4879eb(0x1ff),'html':_0x6c8dfe[_0x4879eb(0x1df)],'iconSize':[0x28,0x14],'iconAnchor':[0x14,0xa]}),'interactive':![]})['addTo'](map);});}L[_0x501053(0x1d3)][_0x501053(0x1dd)]({'Map':_0x23bb58},{'<span\x20style=\x27color:\x20black\x27>CQ\x20Zones</span>':_0x41cf62,'<span\x20style=\x27color:\x20black\x27>QTH\x20Locators</span>':_0x4b4bfe,'<span\x20style=\x27color:\x20black\x27>Stations</span>':markersCluster})[_0x501053(0x1ea)](map);}initMap('');
     </script>
   </body>
 </html>
