--- a/eme-observer/eoml copy 7.html
+++ b/eme-observer/eoml copy 7.html
@@ -2982,60 +2982,52 @@
     }
 
                                             function getCommonWindows(qthLoc, dxLoc, dateStr) {
-                                                if (!qthLoc || !dxLoc || !/^[A-R]{2}[0-9]{2}[A-X]{2}$/.test(qthLoc) || !/^[A-R]{2}[0-9]{2}[A-X]{2}$/.test(dxLoc)) {
-                                                    return [];
-                                                }
-
-                                                const qth = qthToLatLon(qthLoc);
-                                                const dx  = qthToLatLon(dxLoc);
-
-                                                const qthObs = new Astronomy.Observer(qth.lat, qth.lon, 0);
-                                                const dxObs  = new Astronomy.Observer(dx.lat,  dx.lon,  0);
-                                                const time   = Astronomy.MakeTime(new Date(`${dateStr}T00:00:00Z`));
-
-                                                let qthRise, qthSet, dxRise, dxSet;
-                                                try {
-                                                    const qr = Astronomy.SearchRiseSet(Astronomy.Body.Moon, qthObs, +1, time, 2.0); // search ±2 days
-                                                    const qs = Astronomy.SearchRiseSet(Astronomy.Body.Moon, qthObs, -1, time, 2.0);
-                                                    const dr = Astronomy.SearchRiseSet(Astronomy.Body.Moon, dxObs,  +1, time, 2.0);
-                                                    const ds = Astronomy.SearchRiseSet(Astronomy.Body.Moon, dxObs,  -1, time, 2.0);
-
-                                                    qthRise = qr?.date;
-                                                    qthSet  = qs?.date;
-                                                    dxRise  = dr?.date;
-                                                    dxSet   = ds?.date;
-                                                } catch(e) {
-                                                    console.warn("Rise/set search failed:", e);
-                                                    return [];
-                                                }
-
-                                                const windows = [];
-
-                                                // Helper: convert Date to minutes since start of selected day
-                                                const dayStart = new Date(`${dateStr}T00:00:00Z`).getTime();
-                                                const toMinutes = d => (d.getTime() - dayStart) / (1000 * 60);
-
-                                                // Find overlapping interval between the two stations' moon visibility
-                                                if (qthRise && qthSet && dxRise && dxSet) {
-                                                    // Latest rise and earliest set define the common window
-                                                    const commonStart = new Date(Math.max(qthRise.getTime(), dxRise.getTime()));
-                                                    const commonEnd   = new Date(Math.min(qthSet.getTime(),  dxSet.getTime()));
-
-                                                    // Only add if start < end and overlaps with the selected 24h period at all
-                                                    if (commonStart < commonEnd) {
-                                                        const winStartMin = toMinutes(commonStart);
-                                                        const winEndMin   = toMinutes(commonEnd);
-                                                        const dayStartMin = 0;
-                                                        const dayEndMin   = 24 * 60;
-
-                                                        if (winEndMin > dayStartMin && winStartMin < dayEndMin) {
-                                                            windows.push({ start: commonStart, end: commonEnd });
-                                                        }
+                                                    if (!qthLoc || !dxLoc || !/^[A-R]{2}[0-9]{2}[A-X]{2}$/.test(qthLoc) || !/^[A-R]{2}[0-9]{2}[A-X]{2}$/.test(dxLoc)) {
+                                                        return [];
                                                     }
-                                                }
 
-                                                return windows;
-                                            }
+                                                    const qth = qthToLatLon(qthLoc);
+                                                    const dx  = qthToLatLon(dxLoc);
+
+                                                    const qthObs = new Astronomy.Observer(qth.lat, qth.lon, 0);
+                                                    const dxObs  = new Astronomy.Observer(dx.lat,  dx.lon,  0);
+                                                    const time   = Astronomy.MakeTime(new Date(`${dateStr}T00:00:00Z`));
+
+                                                    let qthRise, qthSet, dxRise, dxSet;
+                                                    try {
+                                                        qthRise = Astronomy.SearchRiseSet(Astronomy.Body.Moon, qthObs, +1, time, 1.0)?.date;
+                                                        qthSet  = Astronomy.SearchRiseSet(Astronomy.Body.Moon, qthObs, -1, time, 1.0)?.date;
+                                                        dxRise  = Astronomy.SearchRiseSet(Astronomy.Body.Moon, dxObs,  +1, time, 1.0)?.date;
+                                                        dxSet   = Astronomy.SearchRiseSet(Astronomy.Body.Moon, dxObs,  -1, time, 1.0)?.date;
+                                                    } catch(e) { return []; }
+
+                                                    const windows = [];
+
+                                                    const addWindow = (start, end) => {
+                                                        if (start && end && start < end) windows.push({start, end});
+                                                    };
+
+                                                    const target = dateStr;
+
+                                                    // Most common case – all four events on the selected day
+                                                    if (qthRise?.toISOString().slice(0,10) === target &&
+                                                        qthSet?.toISOString().slice(0,10)  === target &&
+                                                        dxRise?.toISOString().slice(0,10)  === target &&
+                                                        dxSet?.toISOString().slice(0,10)   === target) {
+
+                                                        const commonStart = qthRise > dxRise ? qthRise : dxRise;
+                                                        const commonEnd   = qthSet  < dxSet  ? qthSet  : dxSet;
+                                                        addWindow(commonStart, commonEnd);
+                                                    }
+                                                    // Fallback – at least try to intersect whatever we have
+                                                    else if (qthRise && qthSet && dxRise && dxSet) {
+                                                        const s = qthRise > dxRise ? qthRise : dxRise;
+                                                        const e = qthSet  < dxSet  ? qthSet  : dxSet;
+                                                        addWindow(s, e);
+                                                    }
+
+                                                    return windows;
+                                                }
                                             
     document.getElementById("hour").addEventListener("input", () => {
         hourIndex = parseInt(document.getElementById("hour").value);
